# Cmake-c-template

./: CMakeLists.txt  README.md  build_me.sh  compile_me.sh
include/: version.h.in
src/: example.c
